# ComputerGraphicsProgramingOGLCpp

Exercise2.1/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  Run.bat  main.cpp
Exercise2.1/src/: main.cpp
Exercise2.2/: CMakeLists.txt  Run.bat  vertShader.glsl
Program2.1/: .clang-tidy  CMakeLists.txt  Run.bat  main.cpp
Program2.2/: CMakeLists.txt  Run.bat
Program2.2/src/: main.cpp
Program2.3/: CMakeLists.txt  Run.bat
Program2.3/src/: main.cpp
Program2.4/: CMakeLists.txt  Run.bat
Program2.4/src/: main.cpp
Program2.5/: CMakeLists.txt  Run.bat  vertShader.glsl
Program2.5/src/: main.cpp
Program2.6/: CMakeLists.txt  Run.bat  main.cpp  vertShader.glsl
Program4.1/: CMakeLists.txt  Run.bat  main.cpp
Program4.1-2/: CMakeLists.txt  Run.bat  main.cpp
Program4.1-3/: CMakeLists.txt  Run.bat  fragShader.glsl  main.cpp
Program4.1-4/: CMakeLists.txt  Run.bat  Utils.h  main.cpp  vertShader.glsl
Program4.1-4/src/: main.cpp
Program4.2/: CMakeLists.txt  Run.bat  Utils.cpp  main.cpp  vertShader.glsl
Program4.2-2/: CMakeLists.txt  Run.bat  main.cpp  vertShader.glsl
Program4.2-2/src/: Transform.cpp  main.cpp
Program4.2/src/: Transform.h  main.cpp
Program4.3/: CMakeLists.txt  Run.bat  main.cpp
Program4.3/src/: main.cpp
Program4.4/: CMakeLists.txt  Run.bat  main.cpp
Program4.4/src/: Utils.h  main.cpp
